2008-03-09  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/connectionpool.cc: Don't try to use remembered port
	when m_port is 0. This broke connections to non-self-hosted database
	servers since the connection attempt was only performed on port 0.

	* glom/application.cc: Set "try_other_ports" to TRUE for new documents
	if the document is not self-hosted. Otherwise, only port 5432 was
	tried, and not the other ones specefied in the ConnectionPool's
	constructor.

2008-03-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/glomconversions.cc:
	* glom/libglom/data_structure/glomconversions.h:
	Added get_double_for_gda_value_numeric().
	* glom/base_db.cc: auto_increment_insert_first_if_necessary(),
	recalculate_next_auto_increment_value(),
	get_next_auto_increment_value():
	Return a GdaNumeric Gda::Value, not a string one, and
	do the conversion without the locale affecting it.
	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc:
	fill_values_if_necessary(): Create default values of the correct type. 
	* glom/libglom/utils.cc:
	* glom/libglom/utils.h: Removed decimal_from_string() because it is 
	no longer used.
	This avoids a warning about an incorrect type when adding a row in 
	the list view.

	* examples/example_music_collection.glom: Song table:
	Added Artists doubly-related fields on details and recreate this 
	example.

2008-03-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc: offer_new_or_existing():
	Call connection_pool->set_get_document_func() before calling 
	connection_request_password_and_choose_new_database_name() to 
	avoid a (maybe harmless anyway) warning.

2008-03-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/glomconversions.cc: 
	get_text_for_gda_value(): Improved the warning about the unexpected 
	value type, though I have not yet solved this (minor) problem.
	* glom/utility_widgets/dragbar.cc: Improve the titles in the tool 